--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,79 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@inproceedings{DBLP:conf/asiaccs/CalzavaraCL21,
+  author       = {Stefano Calzavara and
+                  Lorenzo Cazzaro and
+                  Claudio Lucchese},
+  editor       = {Jiannong Cao and
+                  Man Ho Au and
+                  Zhiqiang Lin and
+                  Moti Yung},
+  title        = {{AMEBA:} An Adaptive Approach to the Black-Box Evasion of Machine
+                  Learning Models},
+  booktitle    = {{ASIA} {CCS} '21: {ACM} Asia Conference on Computer and Communications
+                  Security, Virtual Event, Hong Kong, June 7-11, 2021},
+  pages        = {292--306},
+  publisher    = {{ACM}},
+  year         = {2021},
+  url          = {https://doi.org/10.1145/3433210.3453114},
+  doi          = {10.1145/3433210.3453114},
+  timestamp    = {Sun, 02 Oct 2022 15:54:59 +0200},
+  biburl       = {https://dblp.org/rec/conf/asiaccs/CalzavaraCL21.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{DBLP:journals/compsec/CalzavaraCLMO22,
+  author       = {Stefano Calzavara and
+                  Lorenzo Cazzaro and
+                  Claudio Lucchese and
+                  Federico Marcuzzi and
+                  Salvatore Orlando},
+  title        = {Beyond robustness: Resilience verification of tree-based classifiers},
+  journal      = {Comput. Secur.},
+  volume       = {121},
+  pages        = {102843},
+  year         = {2022},
+  url          = {https://doi.org/10.1016/j.cose.2022.102843},
+  doi          = {10.1016/j.cose.2022.102843},
+  timestamp    = {Thu, 22 Sep 2022 19:57:58 +0200},
+  biburl       = {https://dblp.org/rec/journals/compsec/CalzavaraCLMO22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@INPROCEEDINGS{10136173,
+
+  author={Calzavara, Stefano and Cazzaro, Lorenzo and Lucchese, Claudio and Marcuzzi, Federico},
+
+  booktitle={2023 IEEE Conference on Secure and Trustworthy Machine Learning (SaTML)}, 
+
+  title={Explainable Global Fairness Verification of Tree-Based Classifiers}, 
+
+  year={2023},
+
+  volume={},
+
+  number={},
+
+  pages={1-17},
+
+  doi={10.1109/SaTML54575.2023.00011}}
+
+@article{DBLP:journals/corr/abs-2305-03626,
+  author       = {Stefano Calzavara and
+                  Lorenzo Cazzaro and
+                  Giulio Ermanno Pibiri and
+                  Nicola Prezza},
+  title        = {Verifiable Learning for Robust Tree Ensembles},
+  journal      = {CoRR},
+  volume       = {abs/2305.03626},
+  year         = {2023},
+  url          = {https://doi.org/10.48550/arXiv.2305.03626},
+  doi          = {10.48550/arXiv.2305.03626},
+  eprinttype    = {arXiv},
+  eprint       = {2305.03626},
+  timestamp    = {Mon, 26 Jun 2023 20:49:58 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2305-03626.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
-}
