--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -41,23 +41,16 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@INPROCEEDINGS{10136173,
-
-  author={Calzavara, Stefano and Cazzaro, Lorenzo and Lucchese, Claudio and Marcuzzi, Federico},
-
-  booktitle={2023 IEEE Conference on Secure and Trustworthy Machine Learning (SaTML)}, 
-
-  title={Explainable Global Fairness Verification of Tree-Based Classifiers}, 
-
-  year={2023},
-
-  volume={},
-
-  number={},
-
-  pages={1-17},
-
-  doi={10.1109/SaTML54575.2023.00011}}
+@CONFERENCE{Calzavara20231,
+	author = {Calzavara, Stefano and Cazzaro, Lorenzo and Lucchese, Claudio and Marcuzzi, Federico},
+	title = {Explainable Global Fairness Verification of Tree-Based Classifiers},
+	year = {2023},
+	journal = {Proceedings - 2023 IEEE Conference on Secure and Trustworthy Machine Learning, SaTML 2023},
+	pages = {1 – 17},
+	doi = {10.1109/SaTML54575.2023.00011},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85163170571&doi=10.1109%2fSaTML54575.2023.00011&partnerID=40&md5=f41b5e1cdcac4150a06d034736a88e74},
+	type = {Conference paper}
+}
 
 @article{DBLP:journals/corr/abs-2305-03626,
   author       = {Stefano Calzavara and
