--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -30,7 +30,7 @@
                   Federico Marcuzzi and
                   Salvatore Orlando},
   title        = {Beyond robustness: Resilience verification of tree-based classifiers},
-  journal      = {Comput. Secur.},
+  journal      = {Computers&Security},
   volume       = {121},
   pages        = {102843},
   year         = {2022},
