--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -41,7 +41,7 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@CONFERENCE{Calzavara20231,
+@article{Calzavara20231,
 	author = {Calzavara, Stefano and Cazzaro, Lorenzo and Lucchese, Claudio and Marcuzzi, Federico},
 	title = {Explainable Global Fairness Verification of Tree-Based Classifiers},
 	year = {2023},
