--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -41,7 +41,7 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{Calzavara20231,
+@inproceedings{Calzavara20231,
 	author = {Calzavara, Stefano and Cazzaro, Lorenzo and Lucchese, Claudio and Marcuzzi, Federico},
 	title = {Explainable Global Fairness Verification of Tree-Based Classifiers},
 	year = {2023},
@@ -49,23 +49,5 @@
 	pages = {1--17},
 	doi = {10.1109/SaTML54575.2023.00011},
 	url = {https://doi.org/10.1109/SaTML54575.2023.00011}
-}
-
-@article{DBLP:journals/corr/abs-2305-03626,
-  author       = {Stefano Calzavara and
-                  Lorenzo Cazzaro and
-                  Giulio Ermanno Pibiri and
-                  Nicola Prezza},
-  title        = {Verifiable Learning for Robust Tree Ensembles},
-  journal      = {CoRR},
-  volume       = {abs/2305.03626},
-  year         = {2023},
-  url          = {https://doi.org/10.48550/arXiv.2305.03626},
-  doi          = {10.48550/arXiv.2305.03626},
-  eprinttype    = {arXiv},
-  eprint       = {2305.03626},
-  timestamp    = {Mon, 26 Jun 2023 20:49:58 +0200},
-  biburl       = {https://dblp.org/rec/journals/corr/abs-2305-03626.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
