--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,7 @@
   title        = {{AMEBA:} An Adaptive Approach to the Black-Box Evasion of Machine
                   Learning Models},
   booktitle    = {{ACM} Asia Conference on Computer and Communications
-                  Security ({ASIA} {CCS} '21: ), Virtual Event, Hong Kong, June 7-11, 2021},
+                  Security ({ASIA} {CCS} '21), Virtual Event, Hong Kong, June 7-11, 2021},
   pages        = {292--306},
   publisher    = {{ACM}},
   year         = {2021},
@@ -45,7 +45,7 @@
 	author = {Calzavara, Stefano and Cazzaro, Lorenzo and Lucchese, Claudio and Marcuzzi, Federico},
 	title = {Explainable Global Fairness Verification of Tree-Based Classifiers},
 	year = {2023},
-	booktitle = {2023 IEEE Conference on Secure and Trustworthy Machine Learning (SaTML 2023)},
+	booktitle = {2023 IEEE Conference on Secure and Trustworthy Machine Learning (SaTML 2023), Raleigh, North Carolina, USA, February 8-10, 2023},
 	pages = {1--17},
 	doi = {10.1109/SaTML54575.2023.00011},
 	url = {https://doi.org/10.1109/SaTML54575.2023.00011}
