added ccs paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -51,3 +51,14 @@
 	url = {https://doi.org/10.1109/SaTML54575.2023.00011}
 }
 
+@inproceedings{DBLP:journals/corr/abs-2305-03626,
+  author       = {Stefano Calzavara and
+                  Lorenzo Cazzaro and
+                  Giulio Ermanno Pibiri and
+                  Nicola Prezza},
+  title        = {Verifiable Learning for Robust Tree Ensembles},
+  year = {2023},
+	booktitle = {{ACM} {SIGSAC} Conference on Computer and
+                  Communications Security (ACM CCS), Copenhagen, Denmark, November 26-30, 2023},
+}
+
