--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,10 @@
   doi          = {10.1145/3433210.3453114},
   timestamp    = {Sun, 02 Oct 2022 15:54:59 +0200},
   biburl       = {https://dblp.org/rec/conf/asiaccs/CalzavaraCL21.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  abbr={ASIACCS '21},
+  html={https://dl.acm.org/doi/10.1145/3433210.3453114},
+  pdf={https://lorenzocazzaro.github.io/paper/asiaccs21.pdf}
 }
 
 @article{DBLP:journals/compsec/CalzavaraCLMO22,
@@ -38,7 +41,11 @@
   doi          = {10.1016/j.cose.2022.102843},
   timestamp    = {Thu, 22 Sep 2022 19:57:58 +0200},
   biburl       = {https://dblp.org/rec/journals/compsec/CalzavaraCLMO22.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  abbr={CoSe},
+  html={https://www.sciencedirect.com/science/article/abs/pii/S0167404822002371},
+  pdf={https://lorenzocazzaro.github.io/paper/2112.02705.pdf},
+  code={https://github.com/FedericoMarcuzzi/resilience-verification}
 }
 
 @inproceedings{Calzavara20231,
@@ -48,7 +55,11 @@
 	booktitle = {2023 IEEE Conference on Secure and Trustworthy Machine Learning (SaTML 2023), Raleigh, North Carolina, USA, February 8-10, 2023},
 	pages = {1--17},
 	doi = {10.1109/SaTML54575.2023.00011},
-	url = {https://doi.org/10.1109/SaTML54575.2023.00011}
+	url = {https://doi.org/10.1109/SaTML54575.2023.00011},
+  abbr={SaTML 2023},
+  html={https://ieeexplore.ieee.org/document/10136173},
+  pdf={https://lorenzocazzaro.github.io/paper/satml23.pdf},
+  code={https://github.com/LorenzoCazzaro/explainable-global-fairness-verification}
 }
 
 @inproceedings{DBLP:journals/corr/abs-2305-03626,
@@ -60,5 +71,9 @@
   year = {2023},
 	booktitle = {{ACM} {SIGSAC} Conference on Computer and
                   Communications Security (ACM CCS), Copenhagen, Denmark, November 26-30, 2023},
+  abbr={CCS' 23},
+  html={https://arxiv.org/abs/2305.03626},
+  pdf={https://lorenzocazzaro.github.io/paper/CCS2023},
+  code={https://github.com/LorenzoCazzaro/Verifiable-Learning-Robust-Tree-Ensembles}
 }
 
