--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,7 +21,7 @@
   timestamp    = {Sun, 02 Oct 2022 15:54:59 +0200},
   biburl       = {https://dblp.org/rec/conf/asiaccs/CalzavaraCL21.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org},
-  abbr={ASIACCS '21},
+  abbr={ASIACCS 2021},
   html={https://dl.acm.org/doi/10.1145/3433210.3453114},
   pdf={https://lorenzocazzaro.github.io/paper/asiaccs21.pdf}
 }
@@ -71,7 +71,7 @@
   year = {2023},
 	booktitle = {{ACM} {SIGSAC} Conference on Computer and
                   Communications Security (ACM CCS), Copenhagen, Denmark, November 26-30, 2023},
-  abbr={CCS' 23},
+  abbr={CCS 2023},
   html={https://arxiv.org/abs/2305.03626},
   pdf={https://lorenzocazzaro.github.io/paper/CCS2023},
   code={https://github.com/LorenzoCazzaro/Verifiable-Learning-Robust-Tree-Ensembles}
