--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -73,7 +73,7 @@
                   Communications Security (ACM CCS), Copenhagen, Denmark, November 26-30, 2023},
   abbr={CCS 2023},
   html={https://arxiv.org/abs/2305.03626},
-  pdf={https://lorenzocazzaro.github.io/paper/CCS2023},
+  pdf={https://lorenzocazzaro.github.io/paper/CCS2023.pdf},
   code={https://github.com/LorenzoCazzaro/Verifiable-Learning-Robust-Tree-Ensembles}
 }
 
