--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -77,3 +77,19 @@
   code={https://github.com/LorenzoCazzaro/Verifiable-Learning-Robust-Tree-Ensembles}
 }
 
+@article{DBLP:journals/corr/abs-2402-14988,
+  author       = {Stefano Calzavara and
+                  Lorenzo Cazzaro and
+                  Claudio Lucchese and
+                  Giulio Ermanno Pibiri},
+  title        = {Verifiable Boosted Tree Ensembles},
+  journal      = {CoRR},
+  volume       = {abs/2402.14988},
+  year         = {2024},
+  url          = {https://doi.org/10.48550/arXiv.2402.14988},
+  doi          = {10.48550/ARXIV.2402.14988},
+  eprinttype    = {arXiv},
+  eprint       = {2402.14988},
+  timestamp    = {Fri, 22 Mar 2024 12:19:03 +0100},
+  html={https://arxiv.org/abs/2305.03626}
+}
