--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -82,7 +82,7 @@
                   Lorenzo Cazzaro and
                   Claudio Lucchese and
                   Giulio Ermanno Pibiri},
-  title        = {Verifiable Boosted Tree Ensembles},
+  title        = {Verifiable Boosted Tree Ensembles (pre-print},
   journal      = {CoRR},
   volume       = {abs/2402.14988},
   year         = {2024},
