--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -82,7 +82,7 @@
                   Lorenzo Cazzaro and
                   Claudio Lucchese and
                   Giulio Ermanno Pibiri},
-  title        = {Verifiable Boosted Tree Ensembles (pre-print},
+  title        = {Verifiable Boosted Tree Ensembles (pre-print)},
   journal      = {CoRR},
   volume       = {abs/2402.14988},
   year         = {2024},
@@ -91,5 +91,6 @@
   eprinttype    = {arXiv},
   eprint       = {2402.14988},
   timestamp    = {Fri, 22 Mar 2024 12:19:03 +0100},
-  html={https://arxiv.org/abs/2305.03626}
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2402-14988.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
