--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -93,5 +93,6 @@
   timestamp    = {Fri, 22 Mar 2024 12:19:03 +0100},
   pdf={https://arxiv.org/abs/2402.14988},
   biburl       = {https://dblp.org/rec/journals/corr/abs-2402-14988.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  abbr={Arxiv}
 }
