--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -77,22 +77,15 @@
   code={https://github.com/LorenzoCazzaro/Verifiable-Learning-Robust-Tree-Ensembles}
 }
 
-@article{DBLP:journals/corr/abs-2402-14988,
+@article{DBLP:journals/corr/CalzavaraCLP24,
   author       = {Stefano Calzavara and
                   Lorenzo Cazzaro and
                   Claudio Lucchese and
                   Giulio Ermanno Pibiri},
-  title        = {Verifiable Boosted Tree Ensembles (pre-print)},
-  journal      = {CoRR},
-  volume       = {abs/2402.14988},
-  year         = {2024},
-  url          = {https://doi.org/10.48550/arXiv.2402.14988},
-  doi          = {10.48550/ARXIV.2402.14988},
-  eprinttype    = {arXiv},
-  eprint       = {2402.14988},
-  timestamp    = {Fri, 22 Mar 2024 12:19:03 +0100},
-  pdf={https://arxiv.org/abs/2402.14988},
-  biburl       = {https://dblp.org/rec/journals/corr/abs-2402-14988.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org},
-  abbr={Arxiv}
+  title        = {Verifiable Boosted Tree Ensembles},
+  year = {2024},
+  booktitle = {46th {IEEE} {Symposium} on {Security} and {Privacy}, San Francisco, USA, May 12-15, 2025},
+  abbr={S&P 2025},
+  pdf={https://lorenzocazzaro.github.io/paper/s&p2025-Verifiable_Boosted_Tree_Ensembles.pdf},
+  code={https://github.com/LorenzoCazzaro/verifiable-boosted-tree-ensembles}
 }
