--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,7 +22,7 @@
   biburl       = {https://dblp.org/rec/conf/asiaccs/CalzavaraCL21.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org},
   abbr={ASIACCS 2021},
-  html={https://dl.acm.org/doi/10.1145/3433210.3453114},
+  html={https://doi.org/10.1145/3433210.3453114},
   pdf={https://lorenzocazzaro.github.io/paper/asiaccs21.pdf}
 }
 
@@ -43,7 +43,7 @@
   biburl       = {https://dblp.org/rec/journals/compsec/CalzavaraCLMO22.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org},
   abbr={CoSe},
-  html={https://www.sciencedirect.com/science/article/abs/pii/S0167404822002371},
+  html={https://doi.org/10.1016/j.cose.2022.102843},
   pdf={https://lorenzocazzaro.github.io/paper/2112.02705.pdf},
   code={https://github.com/FedericoMarcuzzi/resilience-verification}
 }
@@ -57,35 +57,91 @@
 	doi = {10.1109/SaTML54575.2023.00011},
 	url = {https://doi.org/10.1109/SaTML54575.2023.00011},
   abbr={SaTML 2023},
-  html={https://ieeexplore.ieee.org/document/10136173},
+  html={https://doi.org/10.1109/SaTML54575.2023.00011},
   pdf={https://lorenzocazzaro.github.io/paper/satml23.pdf},
   code={https://github.com/LorenzoCazzaro/explainable-global-fairness-verification}
 }
 
-@inproceedings{DBLP:journals/corr/abs-2305-03626,
+@inproceedings{CalzavaraCPP23,
   author       = {Stefano Calzavara and
                   Lorenzo Cazzaro and
                   Giulio Ermanno Pibiri and
                   Nicola Prezza},
+  editor       = {Weizhi Meng and
+                  Christian Damsgaard Jensen and
+                  Cas Cremers and
+                  Engin Kirda},
   title        = {Verifiable Learning for Robust Tree Ensembles},
-  year = {2023},
-	booktitle = {{ACM} {SIGSAC} Conference on Computer and
-                  Communications Security (ACM CCS), Copenhagen, Denmark, November 26-30, 2023},
+  booktitle    = {Proceedings of the 2023 {ACM} {SIGSAC} Conference on Computer and
+                  Communications Security, {CCS} 2023, Copenhagen, Denmark, November
+                  26-30, 2023},
+  pages        = {1850--1864},
+  publisher    = {{ACM}},
+  year         = {2023},
+  url          = {https://doi.org/10.1145/3576915.3623100},
+  doi          = {10.1145/3576915.3623100},
+  timestamp    = {Tue, 28 Nov 2023 20:06:18 +0100},
+  biburl       = {https://dblp.org/rec/conf/ccs/CalzavaraCPP23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
   abbr={CCS 2023},
-  html={https://arxiv.org/abs/2305.03626},
+  html={https://doi.org/10.1145/3576915.3623100},
   pdf={https://lorenzocazzaro.github.io/paper/CCS2023.pdf},
   code={https://github.com/LorenzoCazzaro/Verifiable-Learning-Robust-Tree-Ensembles}
 }
 
-@article{DBLP:journals/corr/CalzavaraCLP24,
+@inproceedings{CalzavaraCLP25,
+  author = { Calzavara, Stefano and Cazzaro, Lorenzo and Lucchese, Claudio and Pibiri, Giulio Ermanno },
+  booktitle = { 2025 IEEE Symposium on Security and Privacy (SP) },
+  title = {{ Verifiable Boosted Tree Ensembles }},
+  year = {2025},
+  volume = {},
+  ISSN = {2375-1207},
+  pages = {22-22},
+  doi = {10.1109/SP61157.2025.00022},
+  url = {https://doi.ieeecomputersociety.org/10.1109/SP61157.2025.00022},
+  publisher = {IEEE Computer Society},
+  address = {Los Alamitos, CA, USA},
+  month =May,
+  html={https://doi.ieeecomputersociety.org/10.1109/SP61157.2025.00022},
+  pdf={https://lorenzocazzaro.github.io/paper/S&P2025.pdf},
+  code={https://github.com/LorenzoCazzaro/verifiable-boosted-tree-ensembles}
+}
+
+@article{abs-2410-00862,
   author       = {Stefano Calzavara and
                   Lorenzo Cazzaro and
-                  Claudio Lucchese and
-                  Giulio Ermanno Pibiri},
-  title        = {Verifiable Boosted Tree Ensembles},
-  year = {2024},
-  booktitle = {46th {IEEE} {Symposium} on {Security} and {Privacy}, San Francisco, USA, May 12-15, 2025},
-  abbr={S&P 2025},
-  pdf={https://lorenzocazzaro.github.io/paper/s&p2025-Verifiable_Boosted_Tree_Ensembles.pdf},
-  code={https://github.com/LorenzoCazzaro/verifiable-boosted-tree-ensembles}
+                  Massimo Vettori},
+  title        = {Timber! Poisoning Decision Trees},
+  journal      = {CoRR},
+  volume       = {abs/2410.00862},
+  year         = {2024},
+  url          = {https://doi.org/10.48550/arXiv.2410.00862},
+  doi          = {10.48550/ARXIV.2410.00862},
+  eprinttype    = {arXiv},
+  abbr = {Arxiv},
+  eprint       = {2410.00862},
+  timestamp    = {Tue, 05 Nov 2024 20:39:10 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2410-00862.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  html = {https://doi.org/10.48550/arXiv.2410.00862}
+}
+
+@article{abs-2410-04570,
+  author       = {Stefano Calzavara and
+                  Lorenzo Cazzaro and
+                  Donald Gera and
+                  Salvatore Orlando},
+  title        = {Watermarking Decision Tree Ensembles},
+  journal      = {CoRR},
+  volume       = {abs/2410.04570},
+  year         = {2024},
+  url          = {https://doi.org/10.48550/arXiv.2410.04570},
+  doi          = {10.48550/ARXIV.2410.04570},
+  eprinttype    = {arXiv},
+  abbr = {Arxiv},
+  eprint       = {2410.04570},
+  timestamp    = {Tue, 12 Nov 2024 18:39:24 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2410-04570.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  html = {https://doi.org/10.48550/arXiv.2410.04570}
 }
