--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -111,7 +111,7 @@
   author       = {Stefano Calzavara and
                   Lorenzo Cazzaro and
                   Massimo Vettori},
-  title        = {Timber! Poisoning Decision Trees},
+  title        = {Timber! Poisoning Decision Trees (accepted at SaTML 2025)},
   journal      = {CoRR},
   volume       = {abs/2410.00862},
   year         = {2024},
