--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -101,6 +101,7 @@
   url = {https://doi.ieeecomputersociety.org/10.1109/SP61157.2025.00022},
   publisher = {IEEE Computer Society},
   address = {Los Alamitos, CA, USA},
+  abbr={S&P 2025}
   month =May,
   html={https://doi.ieeecomputersociety.org/10.1109/SP61157.2025.00022},
   pdf={https://lorenzocazzaro.github.io/paper/S&P2025.pdf},
@@ -123,7 +124,8 @@
   timestamp    = {Tue, 05 Nov 2024 20:39:10 +0100},
   biburl       = {https://dblp.org/rec/journals/corr/abs-2410-00862.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org},
-  html = {https://doi.org/10.48550/arXiv.2410.00862}
+  html = {https://doi.org/10.48550/arXiv.2410.00862},
+  pdf = {https://lorenzocazzaro.github.io/paper/Timber!_Arxiv.pdf}
 }
 
 @article{abs-2410-04570,
