--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -101,8 +101,7 @@
   url = {https://doi.ieeecomputersociety.org/10.1109/SP61157.2025.00022},
   publisher = {IEEE Computer Society},
   address = {Los Alamitos, CA, USA},
-  abbr={S\&P 2025}
-  month =May,
+  abbr={S\&P 2025},
   html={https://doi.ieeecomputersociety.org/10.1109/SP61157.2025.00022},
   pdf={https://lorenzocazzaro.github.io/paper/S&P2025.pdf},
   code={https://github.com/LorenzoCazzaro/verifiable-boosted-tree-ensembles}
