--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -111,38 +111,25 @@
   author       = {Stefano Calzavara and
                   Lorenzo Cazzaro and
                   Massimo Vettori},
-  title        = {Timber! Poisoning Decision Trees (accepted at SaTML 2025)},
-  journal      = {CoRR},
-  volume       = {abs/2410.00862},
-  year         = {2024},
-  url          = {https://doi.org/10.48550/arXiv.2410.00862},
-  doi          = {10.48550/ARXIV.2410.00862},
-  eprinttype    = {arXiv},
-  abbr = {Arxiv},
-  eprint       = {2410.00862},
-  timestamp    = {Tue, 05 Nov 2024 20:39:10 +0100},
-  biburl       = {https://dblp.org/rec/journals/corr/abs-2410-00862.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  title        = {Timber! Poisoning Decision Trees (in press, accepted at SaTML 2025)},
+  abbr = {SaTML 2025},
+  year = {2025},
+  booktitle = { 3rd IEEE Conference on Secure and Trustworthy Machine Learning (SaTML 2025)},
   html = {https://doi.org/10.48550/arXiv.2410.00862},
-  pdf = {https://lorenzocazzaro.github.io/paper/Timber!_Arxiv.pdf}
+  pdf = {https://lorenzocazzaro.github.io/paper/Timber!_Arxiv.pdf},
+  code={https://github.com/massimo-vettori/timber}
 }
 
-@article{abs-2410-04570,
-  author       = {Stefano Calzavara and
-                  Lorenzo Cazzaro and
-                  Donald Gera and
-                  Salvatore Orlando},
-  title        = {Watermarking Decision Tree Ensembles},
-  journal      = {CoRR},
-  volume       = {abs/2410.04570},
-  year         = {2024},
-  url          = {https://doi.org/10.48550/arXiv.2410.04570},
-  doi          = {10.48550/ARXIV.2410.04570},
-  eprinttype    = {arXiv},
-  abbr = {Arxiv},
-  eprint       = {2410.04570},
-  timestamp    = {Tue, 12 Nov 2024 18:39:24 +0100},
-  biburl       = {https://dblp.org/rec/journals/corr/abs-2410-04570.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org},
-  html = {https://doi.org/10.48550/arXiv.2410.04570}
+@inproceedings{CalzavaraCGO25,
+  author = {Stefano Calzavara and
+            Lorenzo Cazzaro and
+            Donald Gera and
+            Salvatore Orlando},
+  booktitle = {28th International Conference on Extending Database Technology (EDBT 2025)},
+  title = {{Watermarking Decision Tree Ensembles (in press, accepted at EDBT 2025)}},
+  year = {2025},
+  abbr={EDBT 2025},
+  html={https://doi.org/10.48550/arXiv.2410.04570},
+  pdf={https://lorenzocazzaro.github.io/paper/Watermarking.pdf},
+  code={https://github.com/LorenzoCazzaro/watermarking-decision-tree-ensembles}
 }
