--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -111,10 +111,10 @@
   author       = {Stefano Calzavara and
                   Lorenzo Cazzaro and
                   Massimo Vettori},
-  title        = {Timber! Poisoning Decision Trees (in press, accepted at SaTML 2025)},
-  abbr = {SaTML 2025},
+  booktitle = {3rd IEEE Conference on Secure and Trustworthy Machine Learning (SaTML 2025)},
+  title        = {Timber! Poisoning Decision Trees (in press)},
   year = {2025},
-  booktitle = { 3rd IEEE Conference on Secure and Trustworthy Machine Learning (SaTML 2025)},
+  abbr = {SaTML 2025},
   html = {https://doi.org/10.48550/arXiv.2410.00862},
   pdf = {https://lorenzocazzaro.github.io/paper/Timber!_Arxiv.pdf},
   code={https://github.com/massimo-vettori/timber}
@@ -126,7 +126,7 @@
             Donald Gera and
             Salvatore Orlando},
   booktitle = {28th International Conference on Extending Database Technology (EDBT 2025)},
-  title = {{Watermarking Decision Tree Ensembles (in press, accepted at EDBT 2025)}},
+  title = {{Watermarking Decision Tree Ensembles (in press)}},
   year = {2025},
   abbr={EDBT 2025},
   html={https://doi.org/10.48550/arXiv.2410.04570},
