--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -52,7 +52,7 @@
 	author = {Calzavara, Stefano and Cazzaro, Lorenzo and Lucchese, Claudio and Marcuzzi, Federico},
 	title = {Explainable Global Fairness Verification of Tree-Based Classifiers},
 	year = {2023},
-	booktitle = {2023 IEEE Conference on Secure and Trustworthy Machine Learning (SaTML 2023), Raleigh, North Carolina, USA, February 8-10, 2023},
+	booktitle = {1st IEEE Conference on Secure and Trustworthy Machine Learning (SaTML 2023), Raleigh, North Carolina, USA, February 8-10, 2023},
 	pages = {1--17},
 	doi = {10.1109/SaTML54575.2023.00011},
 	url = {https://doi.org/10.1109/SaTML54575.2023.00011},
@@ -72,7 +72,7 @@
                   Cas Cremers and
                   Engin Kirda},
   title        = {Verifiable Learning for Robust Tree Ensembles},
-  booktitle    = {Proceedings of the 2023 {ACM} {SIGSAC} Conference on Computer and
+  booktitle    = {30th {ACM} {SIGSAC} Conference on Computer and
                   Communications Security, {CCS} 2023, Copenhagen, Denmark, November
                   26-30, 2023},
   pages        = {1850--1864},
@@ -107,7 +107,7 @@
   code={https://github.com/LorenzoCazzaro/verifiable-boosted-tree-ensembles}
 }
 
-@article{abs-2410-00862,
+@article{CalzavaraCV25,
   author       = {Stefano Calzavara and
                   Lorenzo Cazzaro and
                   Massimo Vettori},
