--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,8 +11,9 @@
                   Moti Yung},
   title        = {{AMEBA:} An Adaptive Approach to the Black-Box Evasion of Machine
                   Learning Models},
-  booktitle    = {{ACM} Asia Conference on Computer and Communications
-                  Security ({ASIA} {CCS} '21), Virtual Event, Hong Kong, June 7-11, 2021},
+                   ACM  Conference on Computer and Communications Security 2021 
+  booktitle    = {16th {ACM} {ASIA} Conference on Computer and Communications
+                  Security ({ACM} {ASIACCS} 2021), Virtual Event, Hong Kong, June 7-11, 2021},
   pages        = {292--306},
   publisher    = {{ACM}},
   year         = {2021},
@@ -73,7 +74,7 @@
                   Engin Kirda},
   title        = {Verifiable Learning for Robust Tree Ensembles},
   booktitle    = {30th {ACM} {SIGSAC} Conference on Computer and
-                  Communications Security, {CCS} 2023, Copenhagen, Denmark, November
+                  Communications Security ({CCS} 2023), Copenhagen, Denmark, November
                   26-30, 2023},
   pages        = {1850--1864},
   publisher    = {{ACM}},
@@ -91,7 +92,8 @@
 
 @inproceedings{CalzavaraCLP25,
   author = { Calzavara, Stefano and Cazzaro, Lorenzo and Lucchese, Claudio and Pibiri, Giulio Ermanno },
-  booktitle = { 2025 IEEE Symposium on Security and Privacy (SP) },
+  booktitle = {46th {IEEE} {Symposium} on {Security} and {Privacy} ({IEEE} {S\&P} 2025), San Francisco, USA, May
+                  26-30, 2023},
   title = {{ Verifiable Boosted Tree Ensembles }},
   year = {2025},
   volume = {},
