--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,6 @@
                   Moti Yung},
   title        = {{AMEBA:} An Adaptive Approach to the Black-Box Evasion of Machine
                   Learning Models},
-                   ACM  Conference on Computer and Communications Security 2021 
   booktitle    = {16th {ACM} {ASIA} Conference on Computer and Communications
                   Security ({ACM} {ASIACCS} 2021), Virtual Event, Hong Kong, June 7-11, 2021},
   pages        = {292--306},
@@ -93,7 +92,7 @@
 @inproceedings{CalzavaraCLP25,
   author = { Calzavara, Stefano and Cazzaro, Lorenzo and Lucchese, Claudio and Pibiri, Giulio Ermanno },
   booktitle = {46th {IEEE} {Symposium} on {Security} and {Privacy} ({IEEE} {S\&P} 2025), San Francisco, USA, May
-                  26-30, 2023},
+                  12-15, 2025},
   title = {{ Verifiable Boosted Tree Ensembles }},
   year = {2025},
   volume = {},
@@ -113,7 +112,7 @@
   author       = {Stefano Calzavara and
                   Lorenzo Cazzaro and
                   Massimo Vettori},
-  booktitle = {3rd IEEE Conference on Secure and Trustworthy Machine Learning (SaTML 2025)},
+  booktitle = {3rd IEEE Conference on Secure and Trustworthy Machine Learning (SaTML 2025), Copenhagen, Denmark, April 9-11, 2025},
   title        = {Timber! Poisoning Decision Trees (in press)},
   year = {2025},
   abbr = {SaTML 2025},
@@ -127,7 +126,7 @@
             Lorenzo Cazzaro and
             Donald Gera and
             Salvatore Orlando},
-  booktitle = {28th International Conference on Extending Database Technology (EDBT 2025)},
+  booktitle = {28th International Conference on Extending Database Technology (EDBT 2025), Barcelona, Spain, March 25-28, 2025},
   title = {{Watermarking Decision Tree Ensembles (in press)}},
   year = {2025},
   abbr={EDBT 2025},
