--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -108,7 +108,7 @@
   code={https://github.com/LorenzoCazzaro/verifiable-boosted-tree-ensembles}
 }
 
-@article{CalzavaraCV25,
+@inproceedings{CalzavaraCV25,
   author       = {Stefano Calzavara and
                   Lorenzo Cazzaro and
                   Massimo Vettori},
