--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -134,3 +134,15 @@
   pdf={https://lorenzocazzaro.github.io/paper/Watermarking.pdf},
   code={https://github.com/LorenzoCazzaro/watermarking-decision-tree-ensembles}
 }
+
+@inproceedings{CazzaroCKSP25,
+  author = {Lorenzo Cazzaro and
+            Stefano Calzavara and
+            Maksim Kovalkov and
+            Aleksei Stafeev and
+            Giancarlo Pellegrino},
+  booktitle = {55th Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN 2025), Naples, Italy, June 23-26, 2025},
+  title = {{Less is More: Boosting Coverage of Web Crawling through Adversarial Multi-Armed Bandit (in press)}},
+  year = {2025},
+  abbr={DSN 2025}
+}
