--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -127,10 +127,10 @@
             Donald Gera and
             Salvatore Orlando},
   booktitle = {28th International Conference on Extending Database Technology (EDBT 2025), Barcelona, Spain, March 25-28, 2025},
-  title = {{Watermarking Decision Tree Ensembles (in press)}},
+  title = {{Watermarking Decision Tree Ensembles}},
   year = {2025},
   abbr={EDBT 2025},
-  html={https://doi.org/10.48550/arXiv.2410.04570},
+  html={https://edbticdt2025.upc.edu/?contents=accepted-papers-research-track.html},
   pdf={https://lorenzocazzaro.github.io/paper/Watermarking.pdf},
   code={https://github.com/LorenzoCazzaro/watermarking-decision-tree-ensembles}
 }
