--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -117,7 +117,7 @@
   year = {2025},
   abbr = {SaTML 2025},
   html = {https://doi.org/10.48550/arXiv.2410.00862},
-  pdf = {https://lorenzocazzaro.github.io/paper/Timber!_Arxiv.pdf},
+  pdf = {https://lorenzocazzaro.github.io/paper/timber_arxiv_v2.pdf},
   code={https://github.com/massimo-vettori/timber}
 }
 
