--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -144,5 +144,7 @@
   booktitle = {55th Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN 2025), Naples, Italy, June 23-26, 2025},
   title = {{Less is More: Boosting Coverage of Web Crawling through Adversarial Multi-Armed Bandit (in press)}},
   year = {2025},
-  abbr={DSN 2025}
+  abbr={DSN 2025},
+  pdf={https://lorenzocazzaro.github.io/paper/dsn25.pdf},
+  code={https://doi.org/10.5281/zenodo.14276533}
 }
