--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -93,7 +93,7 @@
   author = { Calzavara, Stefano and Cazzaro, Lorenzo and Lucchese, Claudio and Pibiri, Giulio Ermanno },
   booktitle = {46th {IEEE} {Symposium} on {Security} and {Privacy} ({IEEE} {S\&P} 2025), San Francisco, USA, May
                   12-15, 2025},
-  title = {{ Verifiable Boosted Tree Ensembles }},
+  title = {{ Verifiable Boosted Tree Ensembles (Distinguished Paper Award)}},
   year = {2025},
   volume = {},
   ISSN = {2375-1207},
@@ -113,11 +113,11 @@
                   Lorenzo Cazzaro and
                   Massimo Vettori},
   booktitle = {3rd IEEE Conference on Secure and Trustworthy Machine Learning (SaTML 2025), Copenhagen, Denmark, April 9-11, 2025},
-  title = {Timber! Poisoning Decision Trees (in press)},
+  title = {Timber! Poisoning Decision Trees},
   year = {2025},
   abbr = {SaTML 2025},
-  html = {https://doi.org/10.48550/arXiv.2410.00862},
-  pdf = {https://lorenzocazzaro.github.io/paper/timber_arxiv_v2.pdf},
+  html = {https://ieeexplore.ieee.org/document/10992468},
+  pdf = {https://lorenzocazzaro.github.io/paper/satml25.pdf},
   code={https://github.com/massimo-vettori/timber}
 }
 
@@ -145,6 +145,7 @@
   title = {{Less is More: Boosting Coverage of Web Crawling through Adversarial Multi-Armed Bandit (in press)}},
   year = {2025},
   abbr={DSN 2025},
+  html={https://ieeexplore.ieee.org/document/11068867},
   pdf={https://lorenzocazzaro.github.io/paper/dsn25.pdf},
   code={https://doi.org/10.5281/zenodo.14276533}
 }
