--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -142,7 +142,7 @@
             Aleksei Stafeev and
             Giancarlo Pellegrino},
   booktitle = {55th Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN 2025), Naples, Italy, June 23-26, 2025},
-  title = {{Less is More: Boosting Coverage of Web Crawling through Adversarial Multi-Armed Bandit (in press)}},
+  title = {{Less is More: Boosting Coverage of Web Crawling through Adversarial Multi-Armed Bandit}},
   year = {2025},
   abbr={DSN 2025},
   html={https://ieeexplore.ieee.org/document/11068867},
