--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -93,7 +93,7 @@
   author = { Calzavara, Stefano and Cazzaro, Lorenzo and Lucchese, Claudio and Pibiri, Giulio Ermanno },
   booktitle = {46th {IEEE} {Symposium} on {Security} and {Privacy} ({IEEE} {S\&P} 2025), San Francisco, USA, May
                   12-15, 2025},
-  title = {{ Verifiable Boosted Tree Ensembles (Distinguished Paper Award)}},
+  title = {{ Verifiable Boosted Tree Ensembles [Distinguished Paper Award](https://sp2025.ieee-security.org/awards.html)}},
   year = {2025},
   volume = {},
   ISSN = {2375-1207},
