--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -149,3 +149,20 @@
   pdf={https://lorenzocazzaro.github.io/paper/dsn25.pdf},
   code={https://doi.org/10.5281/zenodo.14276533}
 }
+
+@article{BozzolanCC25,
+  author       = {Simone Bozzolan and
+                  Stefano Calzavara and
+                  Lorenzo Cazzaro},
+  title        = {LLM-Assisted Web Measurements},
+  journal      = {CoRR},
+  volume       = {abs/2510.08101},
+  year         = {2025},
+  url          = {httpsß://doi.org/10.48550/arXiv.2510.08101},
+  doi          = {10.48550/ARXIV.2510.08101},
+  eprinttype    = {arXiv},
+  eprint       = {2510.08101},
+  timestamp    = {Tue, 11 Nov 2025 13:12:18 +0100},
+  html={https://doi.org/10.48550/arXiv.2510.08101},
+  pdf={https://lorenzocazzaro.github.io/paper/2510.08101v1.pdf},
+  }
