--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -161,6 +161,7 @@
   url          = {httpsß://doi.org/10.48550/arXiv.2510.08101},
   doi          = {10.48550/ARXIV.2510.08101},
   eprinttype    = {arXiv},
+  abbr          = {Arxiv},
   eprint       = {2510.08101},
   timestamp    = {Tue, 11 Nov 2025 13:12:18 +0100},
   html={https://doi.org/10.48550/arXiv.2510.08101},
